patent assignee - compustat gvkey 매칭
17.9.13

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 for_test.ipynb
+for_test.ipynb
+Exploring data.ipynb
+.ipynb_checkpoints/compustat processing-checkpoint.ipynb
+.ipynb_checkpoints/exploring litigation data-checkpoint.ipynb
+.ipynb_checkpoints/for_test-checkpoint.ipynb
+.ipynb_checkpoints/Exploring data-checkpoint.ipynb
