litigation data 살펴보기
17.9.19

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ Exploring data.ipynb
 .ipynb_checkpoints/exploring litigation data-checkpoint.ipynb
 .ipynb_checkpoints/for_test-checkpoint.ipynb
 .ipynb_checkpoints/Exploring data-checkpoint.ipynb
+1 patent data processing/.ipynb_checkpoints/2_Fung data processing-checkpoint.ipynb
+.ipynb_checkpoints/litigation matching-checkpoint.ipynb
+Exploring data.ipynb
