litigation 이름 매칭
17.9.27

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Exploring data.ipynb
 1 patent data processing/.ipynb_checkpoints/2_Fung data processing-checkpoint.ipynb
 .ipynb_checkpoints/litigation matching-checkpoint.ipynb
 Exploring data.ipynb
+.ipynb_checkpoints/matrix transform (교수님 일)-checkpoint.ipynb
