compustat (08-12., bio) 처리
17.10.11

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Exploring data.ipynb
 .ipynb_checkpoints/litigation matching-checkpoint.ipynb
 Exploring data.ipynb
 .ipynb_checkpoints/matrix transform (교수님 일)-checkpoint.ipynb
+1 patent data processing/.ipynb_checkpoints/3_USPTO_hist Fung merge-checkpoint.ipynb
+1 patent data processing/.ipynb_checkpoints/1_USPTO Patent selection-checkpoint.ipynb
