--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,10 @@ Exploring data.ipynb
 .ipynb_checkpoints/matrix transform (교수님 일)-checkpoint.ipynb
 1 patent data processing/.ipynb_checkpoints/3_USPTO_hist Fung merge-checkpoint.ipynb
 1 patent data processing/.ipynb_checkpoints/1_USPTO Patent selection-checkpoint.ipynb
+3 compustat/.ipynb_checkpoints/patent - compustat matching (Bio)-checkpoint.ipynb
+2 app data processing/.ipynb_checkpoints/3_Get USAappcitation from USPTO XMLs-checkpoint.ipynb
+*.ipynb
+3 compustat/.ipynb_checkpoints/patent - compustat matching (Bio)-checkpoint.ipynb
+3 compustat/.ipynb_checkpoints/patent - compustat matching (Bio)-checkpoint.ipynb
+3 compustat/.ipynb_checkpoints/patent - compustat matching (Bio)-checkpoint.ipynb
+2 app data processing/.ipynb_checkpoints/3_Get USAappcitation from USPTO XMLs-checkpoint.ipynb
