app citation 마무리
17.10.31

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ Exploring data.ipynb
 3 compustat/.ipynb_checkpoints/compustat processing 05-07-checkpoint.ipynb
 4 litigation/.ipynb_checkpoints/2_litigation matching (bio)-checkpoint.ipynb
 4 litigation/.ipynb_checkpoints/2_litigation matching-checkpoint.ipynb
+.ipynb_checkpoints/3 patent-checkpoint.ipynb
+5 make features/.ipynb_checkpoints/1 app_citation-checkpoint.ipynb
+.ipynb_checkpoints/2 compustat-checkpoint.ipynb
