market concentration 넣어서 마무리
17.11.1

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ Exploring data.ipynb
 .ipynb_checkpoints/3 patent-checkpoint.ipynb
 5 make features/.ipynb_checkpoints/1 app_citation-checkpoint.ipynb
 .ipynb_checkpoints/2 compustat-checkpoint.ipynb
+.ipynb_checkpoints/4 litigation-checkpoint.ipynb
