patcit 변수 추출중
17.11.26

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ Exploring data.ipynb
 5 make features/.ipynb_checkpoints/1 app_citation-checkpoint.ipynb
 .ipynb_checkpoints/2 compustat-checkpoint.ipynb
 .ipynb_checkpoints/4 litigation-checkpoint.ipynb
+5 make features/.ipynb_checkpoints/5 final csv-checkpoint.ipynb
+.ipynb_checkpoints/patcit-checkpoint.ipynb
+5 make features/.ipynb_checkpoints/4 litigation-checkpoint.ipynb
